test/files/neg/t8431.check
t8431.scala:24: error: type mismatch;
 found   : CanBuildFrom[Invariant[Nothing]]
 required: CanBuildFrom[Invariant[G]]
  s.combined // fail
  ^
t8431.scala:24: error: value combined is not a member of Invariant[Nothing]
  s.combined // fail
    ^
t8431.scala:35: error: type mismatch;
 found   : CanBuildFrom[Invariant[Nothing]]
 required: CanBuildFrom[Invariant[G]]
  s.combined // was okay!
  ^
t8431.scala:35: error: value combined is not a member of Invariant[Nothing]
  s.combined // was okay!
    ^
t8431.scala:45: error: type mismatch;
 found   : CanBuildFrom[Invariant[Nothing]]
 required: CanBuildFrom[Invariant[G]]
  convert2(s).combined
          ^
t8431.scala:48: error: type mismatch;
 found   : CanBuildFrom[Invariant[Nothing]]
 required: CanBuildFrom[Invariant[G]]
  {val c1 = convert2(s); c1.combined}
                    ^
6 errors found
